--- a/jsons/flutter_v_apps.json
+++ b/jsons/flutter_v_apps.json
@@ -1,6 +1,6 @@
 [
   {
-    "url": "",
+    "url": "https://testflight.apple.com/join/DkPMy9qx",
     "name": "X视频",
     "description": "免费 VIP 追剧",
     "iconUrl": "https://raw.githubusercontent.com/yyds-book/book/main/image/icon.jpg",
