--- a/jsons/flutter_v_apps.json
+++ b/jsons/flutter_v_apps.json
@@ -1,8 +1,8 @@
 [
   {
     "url": "https://testflight.apple.com/join/DkPMy9qx",
-    "name": "X视频",
-    "description": "免费 VIP 追剧",
+    "name": "X电影",
+    "description": "免费 VIP 追剧，极致纯粹的观影工具",
     "iconUrl": "https://raw.githubusercontent.com/yyds-book/book/main/image/icon.jpg",
     "packageName": "",
     "bundleId": "",
