--- a/apps.json
+++ b/apps.json
@@ -3,6 +3,6 @@
     "url": "https://testflight.apple.com/join/DkPMy9qx",
     "name": "万源阅读",
     "description": "全网免费小说阅读器",
-    "icon": "https://raw.githubusercontent.com/yyds-m/movie/refs/heads/main/images/flutter_icon.png"
+    "icon": "flutter_icon"
   }
 ]
